@@ -2717,8 +2717,6 @@ tspan{
 
 .selectorlevels {
 	font-size: 1em;
-	/*margin-top:4px;*/
-	
 }
 #dashcontent .selectorlevels {
 	font-size: 0.9em;
